--- a/index.html
+++ b/index.html
@@ -90,10 +90,15 @@
                         <input id="color" type="color" class="color-pallete color" onchange="setFillColor(event)"></input>
                     </div>
                     <div class="stickers">
-                        STICKERS STICKERS STICKERS
+                        Meme Generator Editor
                         <!-- add 4 stickers here -->
                     </div>
-                    <a class="btn-share" href="#">Share</a>
+                   <div class="share-container">
+                    <a class="btn-share" href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
+                        Share on Facebook
+                      </a>
+                    <!-- <label onclick="onShare()" class="btn-share" for="btn-share">Press to Share</label> -->
+                    </div> 
                     <a class="btn-download" href="#" onclick="downloadCanvas(this)" download="">Download</a>
 
 
