saturday lastest upload

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1>About The Programmer</h1>
         <img class="shlomi-img" src="./assets/IMG-20160701-WA0002.jpg" alt="">
         <p>Hi! My name is Shlomi and i have made this free meme-generator during my web-developement-course.
-            I hope you will enjoy this page and make awesome memes that will make your friends proud (or embaraced..)!!
+            I hope you will enjoy this page and make awesome memes that will make your friends proud (or embarrassed..)!!
             Best of luck and enjoy :)
         </p>
     </div>
