--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="search-bar">
-        <input type="text" placeholder="Search..">
+        <input oninput="onSearch(this.value)" type="text" placeholder="Search..">
         <button>&#128269</button>
     </div>
 
@@ -95,7 +95,7 @@
                     </div>
                    <div class="share-container">
                     <a class="btn-share" href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
-                        Share on Facebook
+                        Share
                       </a>
                     <!-- <label onclick="onShare()" class="btn-share" for="btn-share">Press to Share</label> -->
                     </div> 
