--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- HEADER -->
 
     <header class="navbar-container flex">
-        <section class="logo flex align-center">LOGO</section>
+        <section class="logo flex align-center">Meme Generator</section>
         <ul class="navbar flex align-center space-evenly">
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#about">About</a></li>
@@ -22,8 +22,7 @@
     </header>
 
     <div class="search-bar">
-        <input oninput="onSearch(this.value)" type="text" placeholder="Search..">
-        <button>&#128269</button>
+        <input class="search-btn" oninput="onSearch(this.value)" type="text" placeholder="Search..">
     </div>
 
     <!-- IMAGES GALLERY -->
@@ -52,7 +51,7 @@
 
         <div class="modal-flex-container flex column">
             <header class="modal-navbar navbar-container flex">
-                <section class="logo flex align-center">LOGO</section>
+                <section class="logo-mobile flex align-center">Meme Generator</section>
                 <ul class="navbar flex align-center space-evenly">
                     <li><a onclick="onCloseModal()" href="#gallery">Gallery</a></li>
                     <li><a onclick="onCloseModal()" href="#about">About</a></li>
